Add Google Tag Manager for conversion tracking and update main.js for mobile navigation

--- a/about.html
+++ b/about.html
@@ -193,6 +193,15 @@
             margin-bottom: 10px;
         }
     </style>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17617922277"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'AW-17617922277');
+  </script>
 </head>
 <body>
 
@@ -333,5 +342,6 @@
         </p>
     </footer>
 
+  <script src="assets/main.js"></script>
 </body>
 </html>
