--- a/samsung/index.html
+++ b/samsung/index.html
@@ -8,6 +8,15 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <link rel="stylesheet" href="/assets/styles.css" />
   <meta name="description" content="Expert Samsung service center in Lucknow! Repair TV, Refrigerator, Washing Machine, Microwave. Same-day service, 90-day warranty. Call 1800-309-1619" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17617922277"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'AW-17617922277');
+  </script>
 </head>
 <body data-brand="SAMSUNG">
   <header class="header">
@@ -135,6 +144,6 @@
     </div>
   </footer>
 
-  <script src="/assets/main.js"></script>
+  <script src="../assets/main.js"></script>
 </body>
 </html>
