--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -138,6 +138,15 @@
             text-decoration: underline;
         }
     </style>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17617922277"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'AW-17617922277');
+  </script>
 </head>
 <body>
 
@@ -275,5 +284,6 @@
         </p>
     </footer>
 
+  <script src="assets/main.js"></script>
 </body>
 </html>
