--- a/tvrepair/index.html
+++ b/tvrepair/index.html
@@ -322,6 +322,15 @@
             .showcase-item { flex: 1; }
         }
     </style>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17617922277"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'AW-17617922277');
+  </script>
 </head>
 <body>
 
@@ -533,5 +542,6 @@
         </a>
     </div>
 
+  <script src="../assets/main.js"></script>
 </body>
 </html>
