Update contact number across multiple pages to 18005691141 for consistency and accuracy in customer communication.

--- a/about.html
+++ b/about.html
@@ -338,7 +338,7 @@
             <a href="about.html">About Us</a>
         </p>
         <p style="margin-top: 10px;">
-            <strong>Call:</strong> 1800-309-1619 | <strong>WhatsApp:</strong> +91 89536-89444
+            <strong>Call:</strong> 18005691141 | <strong>WhatsApp:</strong> +91 89536-89444
         </p>
     </footer>
 
