--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>24x7 Service Center Lucknow | Expert TV, Fridge & AC Repair</title>
-  <meta name="description" content="Trusted Service Center in Lucknow for LED TV, Refrigerator, Washing Machine & Microwave. Expert repair for Samsung, LG, Sony, Whirlpool & more. Call 1800-309-1619.">
+  <meta name="description" content="Trusted Service Center in Lucknow for LED TV, Refrigerator, Washing Machine & Microwave. Expert repair for Samsung, LG, Sony, Whirlpool & more. Call 18005691141.">
   <meta name="keywords" content="TV repair Lucknow, Refrigerator repair Lucknow, Washing Machine service, Samsung service center, LG service center, Sony TV repair">
   
   <!-- FontAwesome -->
@@ -135,7 +135,7 @@
       <div class="cta">
         <a href="tel:18005691141" class="btn primary">
           <span class="icon"><i class="fas fa-phone-alt"></i></span>
-          <span>Call Expert: 1800-309-1619</span>
+          <span>Call Expert: 18005691141</span>
         </a>
         <a href="https://wa.me/918953689444?text=Hi,%20I%20need%20service%20for%20my%20appliance" class="btn whatsapp" target="_blank">
           <span class="icon"><i class="fab fa-whatsapp"></i></span>
@@ -239,7 +239,7 @@
   <!-- Sticky Call Bar -->
   <div class="call-now">
     <a href="tel:18005691141">
-      <i class="fas fa-phone-volume"></i> Call Now <span class="phone">1800-309-1619</span>
+      <i class="fas fa-phone-volume"></i> Call Now <span class="phone">18005691141</span>
     </a>
   </div>
 
