--- a/motherboard-repair.html
+++ b/motherboard-repair.html
@@ -68,9 +68,9 @@
       </div>
 
       <div class="cta">
-        <a class="btn primary" href="tel:18005691141" aria-label="Call 1800-309-1619">
+        <a class="btn primary" href="tel:18005691141" aria-label="Call 18005691141">
           <span class="icon"><i class="fas fa-phone-alt"></i></span>
-          <span>Get Estimate: 1800-309-1619</span>
+          <span>Get Estimate: 18005691141</span>
         </a>
       </div>
     </section>
