--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -264,7 +264,7 @@
         <h2>12. Contact Us</h2>
         <p>If you have any questions about this Privacy Policy or our privacy practices, please contact us:</p>
         <ul>
-            <li><strong>Call:</strong> 1800-309-1619</li>
+            <li><strong>Call:</strong> 18005691141</li>
             <li><strong>WhatsApp:</strong> +91 89536-89444</li>
             <li><strong>Email:</strong> support@24x7service.com</li>
             <li><strong>Address:</strong> Lucknow, India</li>
