--- a/warranty.html
+++ b/warranty.html
@@ -57,9 +57,9 @@
       </div>
 
       <div class="cta">
-        <a class="btn primary" href="tel:18005691141" aria-label="Call 1800-309-1619">
+        <a class="btn primary" href="tel:18005691141" aria-label="Call 18005691141">
           <span class="icon"><i class="fas fa-phone-alt"></i></span>
-          <span>Call Support: 1800-309-1619</span>
+          <span>Call Support: 18005691141</span>
         </a>
       </div>
     </section>
