--- a/panasonic/index.html
+++ b/panasonic/index.html
@@ -7,7 +7,7 @@
   <title>Panasonic Service Center Lucknow | Refrigerator, Washing Machine, Microwave, TV Repair</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <link rel="stylesheet" href="/assets/styles.css" />
-  <meta name="description" content="Expert Panasonic service center in Lucknow! Repair Refrigerator, Washing Machine, Microwave, TV. Same-day service, 90-day warranty. Call 1800-309-1619" />
+  <meta name="description" content="Expert Panasonic service center in Lucknow! Repair Refrigerator, Washing Machine, Microwave, TV. Same-day service, 90-day warranty. Call 18005691141" />
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17617922277"></script>
   <script>
@@ -73,9 +73,9 @@
       </div>
 
       <div class="cta">
-        <a class="btn primary" href="tel:18005691141" aria-label="Call 1800-309-1619">
+        <a class="btn primary" href="tel:18005691141" aria-label="Call 18005691141">
           <span class="icon"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M20.01 15.38c-1.23 0-2.42-.2-3.53-.56-.35-.12-.74-.03-1.01.24l-1.57 1.97c-2.83-1.35-5.48-3.9-6.89-6.83l1.95-1.66c.27-.28.35-.67.24-1.02-.37-1.11-.56-2.3-.56-3.53 0-.54-.45-.99-.99-.99H4.19C3.65 3 3 3.24 3 3.99 3 13.28 10.73 21 20.01 21c.71 0 .99-.63.99-1.18v-3.45c0-.54-.45-.99-.99-.99z"/></svg></span>
-          <span>Call 1800-309-1619</span>
+          <span>Call 18005691141</span>
         </a>
         <a class="btn whatsapp" href="https://wa.me/918953689444" target="_blank" rel="noopener" aria-label="WhatsApp +91 89536-89444">
           <span class="icon"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/></svg></span>
@@ -116,7 +116,7 @@
     <section class="section center" id="contact" style="background: linear-gradient(135deg, #0066cc 0%, #004499 100%); color: white; padding: 40px 20px; border-radius: 10px; box-shadow: 0 8px 16px rgba(0,0,0,0.2);">
       <h2 style="color: white; font-size: 28px; margin-bottom: 15px;">Get Your Panasonic Product Fixed Today!</h2>
       <p style="font-size: 18px; margin-bottom: 10px;">Expert technicians available 24/7 across Lucknow</p>
-      <p style="font-size: 20px; margin: 20px 0;"><strong>📞 Call Toll-Free: <a href="tel:18005691141" style="color: #ffffff; text-decoration: none; background: rgba(255,255,255,0.2); padding: 8px 16px; border-radius: 5px; display: inline-block;">1800-309-1619</a></strong></p>
+      <p style="font-size: 20px; margin: 20px 0;"><strong>📞 Call Toll-Free: <a href="tel:18005691141" style="color: #ffffff; text-decoration: none; background: rgba(255,255,255,0.2); padding: 8px 16px; border-radius: 5px; display: inline-block;">18005691141</a></strong></p>
       <p style="font-size: 18px;"><strong>💬 WhatsApp: <a href="https://wa.me/918953689444" style="color: #25D366; text-decoration: none; padding: 8px 16px;" target="_blank" rel="noopener">+91 89536-89444</a></strong></p>
       <p style="margin-top: 20px; font-size: 14px; opacity: 0.9;">⚡ Same-day service available | 💯 90-day warranty on parts</p>
     </section>
@@ -124,12 +124,12 @@
 
   <div class="spacer"></div>
   <div class="call-now">
-    <a href="tel:18005691141">📞 Call Now <span class="phone">1800-309-1619</span></a>
+    <a href="tel:18005691141">📞 Call Now <span class="phone">18005691141</span></a>
   </div>
 
   <footer class="footer" style="background: #1a1a1a; color: #ffffff;">
     <div class="container small">
-      <p class="center" style="font-weight: 600; color: #0066cc; font-size: 16px;">📞 1800-309-1619 | 💬 +91 89536-89444</p>
+      <p class="center" style="font-weight: 600; color: #0066cc; font-size: 16px;">📞 18005691141 | 💬 +91 89536-89444</p>
       <p class="center" style="color: #cccccc;">Available 24/7 for Panasonic Product Repairs in Lucknow</p>
       <p style="margin-top: 15px; color: #cccccc;">© <span data-year></span> Panasonic Service Center Lucknow | All Rights Reserved</p>
       <p class="muted" style="margin-top: 10px; color: #999999;"><strong>Disclaimer:</strong> We are an independent service center for Panasonic products. NOT affiliated with Panasonic. We repair out-of-warranty products using quality spare parts.</p>
