--- a/refrigerator/index.html
+++ b/refrigerator/index.html
@@ -342,7 +342,7 @@
                 <a href="../tvrepair/privacy-policy.html" style="color: #666; font-size: 12px; text-decoration: none;">Privacy</a>
                 <a href="../tvrepair/terms-conditions.html" style="color: #666; font-size: 12px; text-decoration: none;">Terms</a>
                 <a href="../tvrepair/about.html" style="color: #666; font-size: 12px; text-decoration: none;">About</a>
-                <a href="tel:18005691141" class="header-call-btn">📞 1800-309-1619</a>
+                <a href="tel:18005691141" class="header-call-btn">📞 18005691141</a>
             </div>
         </div>
     </header>
@@ -495,7 +495,7 @@
         <div style="background: white; padding: 20px; border-radius: 8px; border: 1px solid #eee; margin-bottom: 30px;">
             <div style="margin-bottom: 20px; padding-bottom: 20px; border-bottom: 1px solid #eee;">
                 <p style="font-weight: bold; color: #0056b3; margin-bottom: 8px; cursor: pointer;">❓ How do I book a repair?</p>
-                <p style="color: #666; font-size: 14px;">Call 1800-309-1619 or WhatsApp +91 89536-89444. Describe your fridge issue and location. We'll be there within 2 hours!</p>
+                <p style="color: #666; font-size: 14px;">Call 18005691141 or WhatsApp +91 89536-89444. Describe your fridge issue and location. We'll be there within 2 hours!</p>
             </div>
             <div style="margin-bottom: 20px; padding-bottom: 20px; border-bottom: 1px solid #eee;">
                 <p style="font-weight: bold; color: #0056b3; margin-bottom: 8px; cursor: pointer;">❓ How much does repair cost?</p>
