--- a/same-day-service.html
+++ b/same-day-service.html
@@ -59,9 +59,9 @@
       </div>
 
       <div class="cta">
-        <a class="btn primary" href="tel:18005691141" aria-label="Call 1800-309-1619">
+        <a class="btn primary" href="tel:18005691141" aria-label="Call 18005691141">
           <span class="icon"><i class="fas fa-phone-alt"></i></span>
-          <span>Book Now: 1800-309-1619</span>
+          <span>Book Now: 18005691141</span>
         </a>
         <a class="btn whatsapp" href="https://wa.me/918953689444" target="_blank" rel="noopener">
           <span class="icon"><i class="fab fa-whatsapp"></i></span>
