--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -267,7 +267,7 @@
         <h2>14. Contact Information</h2>
         <p>If you have any questions about these Terms & Conditions, please contact us:</p>
         <ul>
-            <li><strong>Call:</strong> 1800-309-1619</li>
+            <li><strong>Call:</strong> 18005691141</li>
             <li><strong>WhatsApp:</strong> +91 89536-89444</li>
             <li><strong>Email:</strong> support@24x7service.com</li>
             <li><strong>Address:</strong> Lucknow, India</li>
