--- a/tvrepair/index.html
+++ b/tvrepair/index.html
@@ -342,7 +342,7 @@
                 <a href="privacy-policy.html" style="color: #666; font-size: 12px; text-decoration: none;">Privacy</a>
                 <a href="terms-conditions.html" style="color: #666; font-size: 12px; text-decoration: none;">Terms</a>
                 <a href="about.html" style="color: #666; font-size: 12px; text-decoration: none;">About</a>
-                <a href="tel:18005691141" class="header-call-btn">📞 1800-309-1619</a>
+                <a href="tel:18005691141" class="header-call-btn">📞 18005691141</a>
             </div>
         </div>
     </header>
@@ -495,7 +495,7 @@
         <div style="background: white; padding: 20px; border-radius: 8px; border: 1px solid #eee; margin-bottom: 30px;">
             <div style="margin-bottom: 20px; padding-bottom: 20px; border-bottom: 1px solid #eee;">
                 <p style="font-weight: bold; color: #0056b3; margin-bottom: 8px; cursor: pointer;">❓ How do I book a repair service?</p>
-                <p style="color: #666; font-size: 14px;">Simply call us at 1800-309-1619 or send a message on WhatsApp at +91 89536-89444 with your location and TV issue. We'll schedule a convenient time within 2 hours.</p>
+                <p style="color: #666; font-size: 14px;">Simply call us at 18005691141 or send a message on WhatsApp at +91 89536-89444 with your location and TV issue. We'll schedule a convenient time within 2 hours.</p>
             </div>
             <div style="margin-bottom: 20px; padding-bottom: 20px; border-bottom: 1px solid #eee;">
                 <p style="font-weight: bold; color: #0056b3; margin-bottom: 8px; cursor: pointer;">❓ What is the service charge?</p>
