Refactor service area and contact information to reflect nationwide coverage; update descriptions and titles for consistency across appliance repair services.

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | 24x7 Service TV Repair</title>
-    <meta name="description" content="About 24x7 Service - Expert TV repair service in Lucknow with 10+ years of experience.">
+    <meta name="description" content="About 24x7 Service - Expert appliance repair service nationwide with 10+ years of experience.">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -222,17 +222,17 @@
 
         <h2>Who We Are</h2>
         <p>
-            24x7 Service is a premier, independent TV repair service center operating in Lucknow, India. We specialize in repairing all major TV brands including Sony, Samsung, LG, MI, Panasonic, and many others, regardless of warranty status. With over 10 years of experience in the electronics repair industry, we have earned the trust of thousands of satisfied customers through our commitment to quality, reliability, and exceptional service.
+            24x7 Service is a premier, independent appliance repair service operating nationwide across India. We specialize in repairing all major appliance brands including TV, Refrigerator, Washing Machine and other home appliances from Samsung, LG, Sony, Whirlpool, and many others, regardless of warranty status. With over 10 years of experience in the electronics repair industry, we have earned the trust of thousands of satisfied customers through our commitment to quality, reliability, and exceptional service.
         </p>
 
         <h2>Our Mission</h2>
         <p>
-            Our mission is to provide fast, reliable, and affordable TV repair services to the residents of Lucknow. We believe that every customer deserves professional service at their doorstep without the hassle of traveling to service centers. We aim to extend the lifespan of your TVs and provide value-for-money repairs with genuine spare parts.
+            Our mission is to provide fast, reliable, and affordable appliance repair services to customers across India. We believe that every customer deserves professional service at their doorstep without the hassle of traveling to service centers. We aim to extend the lifespan of your appliances and provide value-for-money repairs with genuine spare parts.
         </p>
 
         <h2>Our Vision</h2>
         <p>
-            To become the most trusted and preferred TV repair service provider in Lucknow by delivering excellence in customer service, technical expertise, and innovative solutions.
+            To become the most trusted and preferred appliance repair service provider in India by delivering excellence in customer service, technical expertise, and innovative solutions.
         </p>
 
         <h2>Our Core Values</h2>
@@ -273,7 +273,7 @@
             <li><strong>Transparent Pricing:</strong> No hidden charges, clear cost breakdown before work begins</li>
             <li><strong>Professional Staff:</strong> Courteous and experienced technicians</li>
             <li><strong>Out-of-Warranty Service:</strong> We repair all models, even out-of-warranty</li>
-            <li><strong>Convenient Location:</strong> Serving all areas of Lucknow</li>
+            <li><strong>Pan-India Service:</strong> Serving customers across all states</li>
             <li><strong>Customer Support:</strong> 24/7 phone and WhatsApp support</li>
         </ul>
 
@@ -299,7 +299,7 @@
 
         <h2>Service Areas</h2>
         <p>
-            We provide home service throughout Lucknow. Simply call us or send a WhatsApp message with your location, and we'll schedule a convenient time for the repair. Our technicians arrive fully equipped with diagnostic tools and genuine spare parts.
+            We provide home service throughout India. Simply call us or send a WhatsApp message with your location, and we'll schedule a convenient time for the repair. Our technicians arrive fully equipped with diagnostic tools and genuine spare parts.
         </p>
 
         <h2>Our Expertise</h2>
