--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -267,7 +267,7 @@
             <li><strong>Call:</strong> 18005691141</li>
             <li><strong>WhatsApp:</strong> +91 89536-89444</li>
             <li><strong>Email:</strong> support@24x7service.com</li>
-            <li><strong>Address:</strong> Lucknow, India</li>
+            <li><strong>Address:</strong> India</li>
         </ul>
 
         <p style="margin-top: 40px; padding-top: 20px; border-top: 1px solid #ddd;">
