--- a/refrigerator/index.html
+++ b/refrigerator/index.html
@@ -350,7 +350,7 @@
     <!-- Main Hero -->
     <section class="hero">
         <div class="container">
-            <h1>Refrigerator Repair Service in <span style="color: #80deea;">Lucknow</span></h1>
+            <h1>Refrigerator Repair Service – <span style="color: #80deea;">Professional & Affordable</span></h1>
             <p><strong>LG, Samsung, Whirlpool, Godrej, Haier & All Brands.</strong><br>Expert Technicians. Same Day Home Service.</p>
             
             <div class="action-buttons">
@@ -460,8 +460,8 @@
         <!-- Service Area Section -->
         <h2 class="section-title">Our Service Areas</h2>
         <div style="background: white; padding: 20px; border-radius: 8px; margin-bottom: 30px; border: 1px solid #eee;">
-            <p style="margin-bottom: 15px; font-size: 16px;"><strong>🚗 Available Across All Lucknow</strong></p>
-            <p style="margin-bottom: 15px; color: #666;">We provide doorstep refrigerator repair service in all areas of Lucknow including:</p>
+            <p style="margin-bottom: 15px; font-size: 16px;"><strong>🚗 Available Across India</strong></p>
+            <p style="margin-bottom: 15px; color: #666;">We provide doorstep refrigerator repair service nationwide including metro and tier-2 cities:</p>
             <p style="margin-bottom: 15px; line-height: 1.8; color: #666; font-size: 13px;">
                 Hazratganj, Gomti Nagar, Indira Nagar, Aliganj, Vikasnagar, Jankipuram, Awadh Nagar, Sector 1-5, Vrindavan Yojana, 
                 Rana Pratap Marg, Thakurganj, Kaiserbagh, Chinar Park, Rajajipuram, Saroj Nagar, Patrakarpuram, Nirala Nagar, 
