--- a/same-day-service.html
+++ b/same-day-service.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Same Day Home Service | 24x7 Service Store Lucknow</title>
+  <title>Same Day Home Service | 24x7 Service Store Nationwide</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <link rel="stylesheet" href="/assets/styles.css" />
-  <meta name="description" content="Get same-day home service for TV, Refrigerator, Washing Machine, and Microwave repair in Lucknow. Fast, reliable, and doorstep repair within hours." />
+  <meta name="description" content="Get same-day home service for TV, Refrigerator, Washing Machine, and Microwave repair nationwide. Fast, reliable, and doorstep repair within hours." />
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17617922277"></script>
   <script>
@@ -38,7 +38,7 @@
   <main class="container">
     <section class="hero">
       <h1><i class="fas fa-bolt" style="color: #ffc107;"></i> Same Day Home Service</h1>
-      <p><strong>Need Urgent Repair?</strong> We understand the inconvenience of a broken appliance. That's why we offer <strong>Same Day Home Service</strong> across Lucknow for all major appliances.</p>
+      <p><strong>Need Urgent Repair?</strong> We understand the inconvenience of a broken appliance. That's why we offer <strong>Same Day Home Service</strong> across India for all major appliances.</p>
       
       <div class="card" style="margin-top: 20px;">
         <h3 style="margin-bottom: 15px;">Why Choose Our Same Day Service?</h3>
@@ -63,10 +63,7 @@
           <span class="icon"><i class="fas fa-phone-alt"></i></span>
           <span>Book Now: 18005691141</span>
         </a>
-        <a class="btn whatsapp" href="https://wa.me/918953689444" target="_blank" rel="noopener">
-          <span class="icon"><i class="fab fa-whatsapp"></i></span>
-          <span>WhatsApp Us</span>
-        </a>
+
       </div>
     </section>
   </main>
