--- a/tvrepair/index.html
+++ b/tvrepair/index.html
@@ -350,7 +350,7 @@
     <!-- Main Hero -->
     <section class="hero">
         <div class="container">
-            <h1>TV Repair Service in <span style="color: #4da6ff;">Lucknow</span></h1>
+            <h1>TV Repair Service – <span style="color: #4da6ff;">Professional & Affordable</span></h1>
             <p><strong>Sony, Samsung, LG, MI, Panasonic.</strong><br>Expert Technicians. Same Day Home Service.</p>
             
             <div class="action-buttons">
@@ -460,8 +460,8 @@
         <!-- Service Area Section -->
         <h2 class="section-title">Our Service Areas</h2>
         <div style="background: white; padding: 20px; border-radius: 8px; margin-bottom: 30px; border: 1px solid #eee;">
-            <p style="margin-bottom: 15px; font-size: 16px;"><strong>🚗 Available Across All Lucknow</strong></p>
-            <p style="margin-bottom: 15px; color: #666;">We provide doorstep TV repair service in all areas of Lucknow including:</p>
+            <p style="margin-bottom: 15px; font-size: 16px;"><strong>🚗 Available Across India</strong></p>
+            <p style="margin-bottom: 15px; color: #666;">We provide doorstep TV repair service nationwide including metro and tier-2 cities:</p>
             <p style="margin-bottom: 15px; line-height: 1.8; color: #666; font-size: 13px;">
                 Hazratganj, Gomti Nagar, Indira Nagar, Aliganj, Vikasnagar, Jankipuram, Awadh Nagar, Sector 1-5, Vrindavan Yojana, 
                 Rana Pratap Marg, Thakurganj, Kaiserbagh, Chinar Park, Rajajipuram, Saroj Nagar, Patrakarpuram, Nirala Nagar, 
@@ -480,7 +480,7 @@
             </div>
             <div style="background: white; padding: 20px; border-radius: 8px; border-left: 4px solid #d32f2f; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
                 <div style="color: #ffb800; margin-bottom: 10px; font-size: 14px;">★★★★★</div>
-                <p style="margin-bottom: 10px; color: #333; font-size: 14px; line-height: 1.6;">"Best repair service in Lucknow. Used genuine parts and gave 90-day warranty. Highly recommended!"</p>
+                <p style="margin-bottom: 10px; color: #333; font-size: 14px; line-height: 1.6;">"Best repair service in India. Used genuine parts and gave 90-day warranty. Highly recommended!"</p>
                 <p style="font-weight: bold; color: #0056b3; font-size: 13px;">Priya Singh, Indira Nagar</p>
             </div>
             <div style="background: white; padding: 20px; border-radius: 8px; border-left: 4px solid #d32f2f; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
