--- a/warranty.html
+++ b/warranty.html
@@ -6,7 +6,7 @@
   <title>3 Months Warranty Policy | 24x7 Service Store</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <link rel="stylesheet" href="/assets/styles.css" />
-  <meta name="description" content="We offer a comprehensive 3-month (90-day) warranty on all repairs and spare parts. Peace of mind guaranteed with 24x7 Service Store Lucknow." />
+  <meta name="description" content="We offer a comprehensive 3-month (90-day) warranty on all repairs and spare parts. Peace of mind guaranteed with 24x7 Service Store nationwide." />
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17617922277"></script>
   <script>
