--- a/washingmachine/index.html
+++ b/washingmachine/index.html
@@ -350,7 +350,7 @@
     <!-- Main Hero -->
     <section class="hero">
         <div class="container">
-            <h1>Washing Machine Repair Service in <span style="color: #a8d8ff;">Lucknow</span></h1>
+            <h1>Washing Machine Repair Service – <span style="color: #a8d8ff;">Professional & Affordable</span></h1>
             <p><strong>LG, Samsung, IFB, Bosch, Whirlpool & All Brands.</strong><br>Expert Technicians. Same Day Home Service.</p>
             
             <div class="action-buttons">
@@ -460,12 +460,10 @@
         <!-- Service Area Section -->
         <h2 class="section-title">Our Service Areas</h2>
         <div style="background: white; padding: 20px; border-radius: 8px; margin-bottom: 30px; border: 1px solid #eee;">
-            <p style="margin-bottom: 15px; font-size: 16px;"><strong>🚗 Available Across All Lucknow</strong></p>
-            <p style="margin-bottom: 15px; color: #666;">We provide doorstep washing machine repair service in all areas of Lucknow including:</p>
+            <p style="margin-bottom: 15px; font-size: 16px;"><strong>🚗 Available Across India</strong></p>
+            <p style="margin-bottom: 15px; color: #666;">We provide doorstep washing machine repair service nationwide including metro and tier-2 cities:</p>
             <p style="margin-bottom: 15px; line-height: 1.8; color: #666; font-size: 13px;">
-                Hazratganj, Gomti Nagar, Indira Nagar, Aliganj, Vikasnagar, Jankipuram, Awadh Nagar, Sector 1-5, Vrindavan Yojana, 
-                Rana Pratap Marg, Thakurganj, Kaiserbagh, Chinar Park, Rajajipuram, Saroj Nagar, Patrakarpuram, Nirala Nagar, 
-                Alambagh, Sadar Bazar, Civil Lines, and all surrounding localities.
+                All major cities • All states • Pan-India service • Same-day service in select areas • Express service available
             </p>
             <p style="color: #d32f2f; font-weight: bold;">📞 Same Day Service Available</p>
         </div>
@@ -480,7 +478,7 @@
             </div>
             <div style="background: white; padding: 20px; border-radius: 8px; border-left: 4px solid #d32f2f; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
                 <div style="color: #ffb800; margin-bottom: 10px; font-size: 14px;">★★★★★</div>
-                <p style="margin-bottom: 10px; color: #333; font-size: 14px; line-height: 1.6;">"Best service in Lucknow! My Samsung machine is working like new. Very reasonable price."</p>
+                <p style="margin-bottom: 10px; color: #333; font-size: 14px; line-height: 1.6;">"Best service in India! My Samsung machine is working like new. Very reasonable price."</p>
                 <p style="font-weight: bold; color: #0056b3; font-size: 13px;">Suresh Kumar, Gomti Nagar</p>
             </div>
             <div style="background: white; padding: 20px; border-radius: 8px; border-left: 4px solid #d32f2f; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
