Update product images and descriptions for IFB, Panasonic, and Sony service pages to enhance clarity and accuracy in appliance repair offerings.

--- a/ifb/index.html
+++ b/ifb/index.html
@@ -222,24 +222,6 @@
       <div class="products-showcase">
         <div class="product-card">
           <div class="product-image">
-            <img src="/img/smart-led-tv-1000x1000.webp" alt="TV" />
-          </div>
-          <div class="product-info">
-            <div class="product-title"><i class="fas fa-tv"></i> LED & Smart TV</div>
-            <div class="product-desc">Display, power, sound, connectivity issues</div>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <img src="/img/fridge.jpg" alt="Refrigerator" />
-          </div>
-          <div class="product-info">
-            <div class="product-title"><i class="fas fa-snowflake"></i> Refrigerator</div>
-            <div class="product-desc">Cooling, compressor, thermostat problems</div>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
             <img src="/img/washing-machine.png" alt="Washing Machine" />
           </div>
           <div class="product-info">
@@ -254,6 +236,24 @@
           <div class="product-info">
             <div class="product-title"><i class="fas fa-fire"></i> Microwave & Oven</div>
             <div class="product-desc">Heating, timer, turntable malfunction</div>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <img src="/img/fridge.jpg" alt="Dishwasher" />
+          </div>
+          <div class="product-info">
+            <div class="product-title"><i class="fas fa-plate-wheat"></i> Dishwasher</div>
+            <div class="product-desc">Spray arm, pump, drying issues</div>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <img src="/img/fridge.jpg" alt="Refrigerator" />
+          </div>
+          <div class="product-info">
+            <div class="product-title"><i class="fas fa-snowflake"></i> Refrigerator</div>
+            <div class="product-desc">Cooling, compressor, thermostat problems</div>
           </div>
         </div>
       </div>
