--- a/panasonic/index.html
+++ b/panasonic/index.html
@@ -231,29 +231,20 @@
         </div>
         <div class="product-card">
           <div class="product-image">
-            <img src="/img/fridge.jpg" alt="Refrigerator" />
-          </div>
-          <div class="product-info">
-            <div class="product-title"><i class="fas fa-snowflake"></i> Refrigerator</div>
-            <div class="product-desc">Cooling, compressor, thermostat problems</div>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <img src="/img/washing-machine.png" alt="Washing Machine" />
-          </div>
-          <div class="product-info">
-            <div class="product-title"><i class="fas fa-tshirt"></i> Washing Machine</div>
-            <div class="product-desc">Motor, drum, water inlet & drainage issues</div>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
             <img src="/img/microwave.jpg" alt="Microwave" />
           </div>
           <div class="product-info">
             <div class="product-title"><i class="fas fa-fire"></i> Microwave & Oven</div>
             <div class="product-desc">Heating, timer, turntable malfunction</div>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <img src="/img/washing-machine.png" alt="Air Conditioner" />
+          </div>
+          <div class="product-info">
+            <div class="product-title"><i class="fas fa-wind"></i> Air Conditioner</div>
+            <div class="product-desc">Cooling, refrigerant, compressor issues</div>
           </div>
         </div>
       </div>
