--- a/sony/index.html
+++ b/sony/index.html
@@ -231,29 +231,11 @@
         </div>
         <div class="product-card">
           <div class="product-image">
-            <img src="/img/fridge.jpg" alt="Refrigerator" />
+            <img src="/img/microwave.jpg" alt="Audio System" />
           </div>
           <div class="product-info">
-            <div class="product-title"><i class="fas fa-snowflake"></i> Refrigerator</div>
-            <div class="product-desc">Cooling, compressor, thermostat problems</div>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <img src="/img/washing-machine.png" alt="Washing Machine" />
-          </div>
-          <div class="product-info">
-            <div class="product-title"><i class="fas fa-tshirt"></i> Washing Machine</div>
-            <div class="product-desc">Motor, drum, water inlet & drainage issues</div>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <img src="/img/microwave.jpg" alt="Microwave" />
-          </div>
-          <div class="product-info">
-            <div class="product-title"><i class="fas fa-fire"></i> Microwave & Oven</div>
-            <div class="product-desc">Heating, timer, turntable malfunction</div>
+            <div class="product-title"><i class="fas fa-music"></i> Audio System</div>
+            <div class="product-desc">Speakers, amplifier, sound quality issues</div>
           </div>
         </div>
       </div>
