--- a/index.html
+++ b/index.html
@@ -6,6 +6,33 @@
     <title>Expert Appliance Repair & Service</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    
+    <!-- Global site tag (gtag.js) - Google Ads: 17617922277 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17617922277"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-17617922277');
+    </script>
+
+    <!-- Event snippet for Contact conversion page -->
+    <script>
+    function gtag_report_conversion(url) {
+      var callback = function () {
+        if (typeof(url) != 'undefined') {
+          window.location = url;
+        }
+      };
+      gtag('event', 'conversion', {
+          'send_to': 'AW-17617922277/ut4QCIGWyr4bEOXR8NBB',
+          'event_callback': callback
+      });
+      return false;
+    }
+    </script>
+
     <script>
         tailwind.config = {
             theme: {
@@ -59,7 +86,7 @@
             <div class="hidden md:flex items-center space-x-6">
                 <div class="flex flex-col items-end">
                     <span class="text-xs text-slate-500 font-semibold uppercase tracking-wider">24/7 Support Line</span>
-                    <a href="tel:18005691141" class="text-xl font-bold text-brand-600 hover:text-brand-800 transition">
+                    <a href="tel:18005691141" onclick="return gtag_report_conversion(this.href);" class="text-xl font-bold text-brand-600 hover:text-brand-800 transition">
                         <i class="fas fa-headset mr-2"></i>1800-569-1141
                     </a>
                 </div>
@@ -68,7 +95,7 @@
                 </button>
             </div>
             <!-- Mobile Call Icon -->
-            <a href="tel:18005691141" class="md:hidden bg-brand-100 text-brand-700 p-2 rounded-full">
+            <a href="tel:18005691141" onclick="return gtag_report_conversion(this.href);" class="md:hidden bg-brand-100 text-brand-700 p-2 rounded-full">
                 <i class="fas fa-phone-alt"></i>
             </a>
         </div>
@@ -92,7 +119,7 @@
                 </p>
                 
                 <div class="flex flex-col sm:flex-row gap-4 justify-center md:justify-start">
-                    <a href="tel:18005691141" class="flex items-center justify-center bg-brand-600 text-white text-lg font-bold px-8 py-4 rounded-xl shadow-xl hover:bg-brand-700 transform hover:-translate-y-1 transition duration-300">
+                    <a href="tel:18005691141" onclick="return gtag_report_conversion(this.href);" class="flex items-center justify-center bg-brand-600 text-white text-lg font-bold px-8 py-4 rounded-xl shadow-xl hover:bg-brand-700 transform hover:-translate-y-1 transition duration-300">
                         <i class="fas fa-phone-alt mr-3"></i> Call 1800-569-1141
                     </a>
                     <button onclick="document.getElementById('booking-form').scrollIntoView({behavior: 'smooth'})" class="flex items-center justify-center bg-white text-slate-700 border-2 border-slate-200 text-lg font-bold px-8 py-4 rounded-xl hover:border-brand-500 hover:text-brand-600 transition duration-300">
@@ -235,7 +262,7 @@
                  <div class="w-full md:w-1/2">
                      <div class="bg-white p-8 rounded-2xl shadow-lg border border-slate-100" id="booking-form">
                          <h3 class="text-2xl font-bold text-center mb-6">Request A Callback</h3>
-                         <form class="space-y-4" onsubmit="event.preventDefault(); alert('Thank you! A technician will call you shortly.');">
+                         <form class="space-y-4" onsubmit="event.preventDefault(); gtag_report_conversion(); alert('Thank you! A technician will call you shortly.');">
                              <div id="brand-select-wrapper">
                                  <label class="block text-sm font-medium text-slate-700 mb-1">Select Brand</label>
                                  <select id="form-brand-select" class="w-full px-4 py-2 rounded-lg border border-slate-300 focus:ring-2 focus:ring-brand-500 focus:border-brand-500 outline-none">
@@ -304,7 +331,7 @@
     <!-- Floating Mobile Call Button -->
     <div class="fixed bottom-0 left-0 w-full md:hidden z-50">
         <div class="flex shadow-lg">
-            <a href="tel:18005691141" class="flex-1 bg-brand-600 text-white py-4 text-center font-bold text-lg flex items-center justify-center animate-pulse-slow">
+            <a href="tel:18005691141" onclick="return gtag_report_conversion(this.href);" class="flex-1 bg-brand-600 text-white py-4 text-center font-bold text-lg flex items-center justify-center animate-pulse-slow">
                 <i class="fas fa-phone-alt mr-2 animate-bounce"></i> CALL NOW
             </a>
             <button onclick="document.getElementById('booking-form').scrollIntoView({behavior: 'smooth'})" class="flex-1 bg-slate-800 text-white py-4 text-center font-bold text-lg">
@@ -314,7 +341,7 @@
     </div>
 
     <!-- Floating Call Button for Desktop -->
-    <a href="tel:18005691141" class="hidden md:flex fixed bottom-8 right-8 bg-brand-600 text-white w-16 h-16 rounded-full items-center justify-center shadow-2xl hover:bg-brand-700 transition transform hover:scale-110 z-50">
+    <a href="tel:18005691141" onclick="return gtag_report_conversion(this.href);" class="hidden md:flex fixed bottom-8 right-8 bg-brand-600 text-white w-16 h-16 rounded-full items-center justify-center shadow-2xl hover:bg-brand-700 transition transform hover:scale-110 z-50">
         <i class="fas fa-phone-alt text-2xl animate-pulse"></i>
     </a>
 
